src/connect4-client/k8s/service.template.yaml
apiVersion: v1
kind: Service
metadata:
  name: connect4
  labels:
    app: connect4
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 3000
  selector:
    app: connect4
