src/connect4-client/k8s/ingress.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: connect4
  labels:
    app: connect4
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
  - host: "connect4.{YOUR_TEAMNAME}.hgopteam.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: connect4
            port:
              number: 8000
  tls:
  - hosts:
    - "connect4.{YOUR_TEAMNAME}.hgopteam.com"
    secretName: connect4-tls
